# atom-engine

./: CMakeLists.txt  README.md  configure_swap_server  run_swap_server
docs/: METHODS.md
include/: requestfactory.h  requestsprocessor.h  requestsprocessormt.h  requestsworker.h  requestsworkermt.h  settings.h  swapserver.h  utils.h
include/requests/: request.h  requestcloseswap.h  requestgetswap.h  requestneworder.h  requestnewtrade.h  requestorders.h  requestredeemswap.h  requestswap.h  requesttrade.h  requesttrades.h
src/: main.cpp  requestfactory.cpp  requestsprocessor.cpp  requestsprocessormt.cpp  requestsworker.cpp  requestsworkermt.cpp  settings.cpp  swapserver.cpp
src/requests/: request.cpp  requestcloseswap.cpp  requestgetswap.cpp  requestneworder.cpp  requestnewtrade.cpp  requestorders.cpp  requestredeemswap.cpp  requestswap.cpp  requesttrade.cpp  requesttrades.cpp
